# goit-web-hw-11-12-13.1

./: .env  alembic.ini  docker-compose.yml  main.py  pyproject.toml  test.db
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 177d3d3b78ed_fix_migration_state.py  213de7c66a41_fix_migration_state.py  309844491a5f_init.py  541873c513ff_init.py  5fa5a45ab3f5_init.py  7d0f25a42888_init.py  84b3b7ec198c_fix_migration_state.py  a32ccba8e689_fix_migration_state.py  baaca26f4a0f_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/src/: schemas.py
src/src/routes/: contacts.py
tests/: conftest.py  test_unit_repository_contacts.py  test_unit_repository_users.py
