[tool.poetry]
name = "hw-11"
version = "0.1.0"
description = ""
authors = ["BombingArt <yaroshenkoyarik987@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
SQLAlchemy = "^2.0.31"
fastapi = "^0.111.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
